--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Albert Lin" />
     <title>貪吃蛇遊戲</title>
+    <link rel="shortcut icon" href="/Snake.jpg" />
+    <link rel="bookmark" href="/Snake.jpg" />
     <link rel="stylesheet" href="./style.css" />
   </head>
 
